--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,5 +1,16 @@
 @import "vars";
 
+@media (max-width: 1368px){
+    .who-worked-wrap .container{
+        width: 90%;
+    }
+}
+
+@media (max-width: 1200px){
+    .container{
+        padding: 0 20px;
+    }
+}
 
 @media (max-width: 1024px){
     .who-worked-wrap{
