--- a/scss/main.scss
+++ b/scss/main.scss
@@ -619,8 +619,9 @@ header.header{
 	.process-follow{
 		display: flex;
 		justify-content: space-between;
-		align-items: flex-start;
+		align-items: stretch;
 		flex-wrap: wrap;
+
 		&__item{
 			text-align: center;
 			width: 25%;
@@ -796,6 +797,7 @@ header.header{
 		justify-content: space-between;
 		align-items: flex-start;
 		flex-wrap: wrap;
+		align-items: stretch;
 		margin-top: 25px;
 		&__item{
 			width: 19%;
@@ -807,7 +809,7 @@ header.header{
 			min-height: 210px;
 			transition: background 0.3s;
 			&:nth-of-type(5n){
-				margin: 0;
+				margin-right: 0;
 			}
 			img{
 				height: 90px;
@@ -1695,7 +1697,7 @@ footer.footer{
 	.includes{
 		display: flex;
 		justify-content: space-between;
-		align-items: flex-start;
+		align-items: stretch;
 		flex-wrap: wrap;
 		&__item{
 			width: 47%;
